force-app/main/default/objects/clofor_com_cfs__ProdSvcPricingQuoteLine__c/fields/clofor_com_cfs__ProdBuyingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProdBuyingUnitPriceLocal__c</fullName>
    <label>PRODUCT BUYING UNIT PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>