force-app/main/default/objects/clofor_com_cfs__ProdSvcPricingQuoteLine__c/fields/clofor_com_cfs__ProdBuyingUnitPriceLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProdBuyingUnitPriceLocalFormu__c</fullName>
    <formula>clofor_com_cfs__ProdPricingID__r.clofor_com_cfs__BuyingCommercialValuePerUnitLocal__c</formula>
    <label>PRODUCT BUYING UNIT PRICE(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>