force-app/main/default/objects/clofor_com_cfs__ProdSvcPricingQuoteLine__c/fields/clofor_com_cfs__ProdBuyingUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProdBuyingUnitPriceUSD__c</fullName>
    <label>PRODUCT BUYING UNIT PRICE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>