force-app/main/default/objects/clofor_com_cfs__ProdSvcPricingQuoteLine__c/fields/clofor_com_cfs__ProdBuyingUnitPriceUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProdBuyingUnitPriceUSDFormu__c</fullName>
    <formula>clofor_com_cfs__ProdPricingID__r.clofor_com_cfs__BuyingCommercialValuePerUnitUSD__c</formula>
    <label>PRODUCT BUYING UNIT PRICE(USD)-FORMU</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>