force-app/main/default/objects/clofor_com_cfs__ProdSvcPricingQuoteLine__c/fields/clofor_com_cfs__ProdSellingUnitPriceUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProdSellingUnitPriceUSDFormu__c</fullName>
    <formula>clofor_com_cfs__ProdPricingID__r.clofor_com_cfs__SellingCommercialValuePerUnitUSD__c</formula>
    <label>PRODUCT SELLING UNIT PRICE(USD)-FORMU</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>