force-app/main/default/objects/clofor_com_cfs__ProdSvcPricingQuoteLine__c/fields/clofor_com_cfs__SvcBuyingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SvcBuyingUnitPriceLocal__c</fullName>
    <label>SVC BUYING UNIT PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>