force-app/main/default/objects/clofor_com_cfs__ProdSvcPricingQuoteLine__c/fields/clofor_com_cfs__SvcPricingID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SvcPricingID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SVC PRICING ID</label>
    <referenceTo>clofor_com_cfs__TariffMaster__c</referenceTo>
    <relationshipName>ProdSrvPricingQuoteLine</relationshipName>
    <type>Lookup</type>
</CustomField>