force-app/main/default/objects/clofor_com_cfs__ProdSvcPricingQuoteLine__c/fields/clofor_com_cfs__SvcSellingUnitPriceLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SvcSellingUnitPriceLocalFormu__c</fullName>
    <formula>clofor_com_cfs__SvcPricingID__r.clofor_com_cfs__SellKingakuJPY__c</formula>
    <label>SVC SELLING UNIT PRICE(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>