force-app/main/default/objects/clofor_com_cfs__ProdSvcPricingQuoteLine__c/fields/clofor_com_cfs__SvcSellingUnitPriceUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SvcSellingUnitPriceUSDFormu__c</fullName>
    <formula>clofor_com_cfs__SvcPricingID__r.clofor_com_cfs__SellAmountUSD__c</formula>
    <label>SVC SELLING UNIT PRICE(USD)-FORMU</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>